# black_wall_loadbalancer

./: .gitignore  README.md  docker-compose.yml  target_services.json
src/load_balancer/: api.dockerfile  background.dockerfile  pyproject.toml
src/load_balancer/app/: dependencies.py  run_app.py  run_background.py
src/load_balancer/app/core/: settings.py
src/load_balancer/app/endpoints/: balancer.py
src/load_balancer/app/services/: flood.py  logger.py  target_service.py
src/target_service/: Dockerfile  pyproject.toml
src/target_service/app/: __init__.py  dependencies.py  run_app.py
src/target_service/app/endpoints/: hello.py
src/target_service/app/services/: track.py
