[tool.poetry]
name = "black_wall_loadbalancer"
version = "0.1.0"
description = ""
authors = ["pimy <daniilchernyj@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
loguru = "^0.6.0"
APScheduler = "^3.9.1"
aioredis = "^2.0.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
